--- a/package.json
+++ b/package.json
@@ -14,21 +14,27 @@
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "5.14.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@vitejs/plugin-react": "^4.2.1",
+    "bcryptjs": "^2.4.3",
+    "browser-image-compression": "^2.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.363.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
     "swagger-jsdoc": "^6.2.8",
@@ -49,5 +55,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2",
     "vite": "^5.1.5"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
