--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
     "test": "jest",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "pm2:start": "pm2 start ecosystem.config.js --env production",
+    "pm2:stop": "pm2 stop ecosystem.config.js"
   },
   "dependencies": {
     "@prisma/client": "5.14.0",
@@ -32,6 +34,7 @@
     "lucide-react": "^0.363.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "pm2": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
