--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,19 @@
 server {
     listen 80;
-    server_name your-domain.com;  # Replace with your domain
+    server_name _;  # Listen on all hostnames
 
-    # Frontend
+    # Serve frontend static files
+    root /var/www/html/Taklaget_Service_App/dist;
+    index index.html;
+
+    # Frontend routes
     location / {
-        root /var/www/html/dist;
         try_files $uri $uri/ /index.html;
     }
 
-    # Backend API
-    location /api {
-        proxy_pass http://localhost:3000;
+    # API routes
+    location /api/ {
+        proxy_pass http://localhost:3000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -18,8 +21,19 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # Uploads directory
-    location /uploads {
-        alias /var/www/html/uploads;
+    # API Documentation
+    location /api-docs {
+        proxy_pass http://localhost:3000/api-docs;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Serve uploaded files
+    location /uploads/ {
+        alias /var/www/html/Taklaget_Service_App/uploads/;
+        try_files $uri =404;
     }
 }
