--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "db:studio": "prisma studio",
     "test": "jest",
     "postinstall": "prisma generate",
-    "pm2:start": "pm2 start ecosystem.config.cjs --env production",
-    "pm2:stop": "pm2 stop ecosystem.config.cjs"
+    "pm2:start": "pm2 start ecosystem.config.js --env production",
+    "pm2:stop": "pm2 stop ecosystem.config.js"
   },
   "dependencies": {
     "@prisma/client": "5.14.0",
