--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;  # Listen on all hostnames
+    server_name 164.92.176.50;  # Your server IP
 
     # Serve frontend static files
     root /var/www/html/Taklaget_Service_App/dist;
