--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,10 @@ server {
     listen 80;
     server_name 164.92.176.50;  # Your server IP
 
+    # Logging configuration
+    access_log /var/log/nginx/app-access.log combined buffer=512k flush=1m;
+    error_log /var/log/nginx/app-error.log warn;
+
     # Serve frontend static files
     root /var/www/html/Taklaget_Service_App/dist;
     index index.html;
@@ -9,16 +13,35 @@ server {
     # Frontend routes
     location / {
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache";
+        add_header X-Content-Type-Options nosniff;
+        add_header X-Frame-Options DENY;
+        add_header X-XSS-Protection "1; mode=block";
     }
 
-    # API routes
+    # API routes with improved proxy settings
     location /api/ {
         proxy_pass http://localhost:3000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 90s;
+        proxy_connect_timeout 90s;
+        proxy_send_timeout 90s;
+
+        # Error handling
+        proxy_intercept_errors on;
+        error_page 500 502 503 504 /50x.html;
+
+        # Added security headers
+        add_header X-Content-Type-Options nosniff;
+        add_header X-Frame-Options DENY;
+        add_header X-XSS-Protection "1; mode=block";
     }
 
     # API Documentation
@@ -29,11 +52,48 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        
+        # Added security headers
+        add_header X-Content-Type-Options nosniff;
+        add_header X-Frame-Options DENY;
+        add_header X-XSS-Protection "1; mode=block";
     }
 
     # Serve uploaded files
     location /uploads/ {
         alias /var/www/html/Taklaget_Service_App/uploads/;
         try_files $uri =404;
+        expires 1h;
+        add_header Cache-Control "public, no-transform";
+        
+        # Added security headers
+        add_header X-Content-Type-Options nosniff;
+        add_header X-Frame-Options DENY;
+        add_header X-XSS-Protection "1; mode=block";
+        
+        # Limit file types
+        location ~* \.(jpg|jpeg|png|gif)$ {
+            try_files $uri =404;
+        }
     }
+
+    # Deny access to . files
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Error pages
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
 }
